// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders error alert 1`] = `
<div>
  <div
    class="alert error"
  >
    <div
      class="icon"
    >
      <i
        class="ri-close-circle-fill"
      />
    </div>
    <div
      class="body"
    >
      <div
        class="message"
      />
    </div>
  </div>
</div>
`;

exports[`renders info alert 1`] = `
<div>
  <div
    class="alert info"
  >
    <div
      class="icon"
    >
      <i
        class="ri-information-fill"
      />
    </div>
    <div
      class="body"
    >
      <div
        class="message"
      />
    </div>
  </div>
</div>
`;

exports[`renders success alert 1`] = `
<div>
  <div
    class="alert success"
  >
    <div
      class="icon"
    >
      <i
        class="ri-checkbox-circle-fill"
      />
    </div>
    <div
      class="body"
    >
      <div
        class="message"
      />
    </div>
  </div>
</div>
`;

exports[`renders warning alert 1`] = `
<div>
  <div
    class="alert warning"
  >
    <div
      class="icon"
    >
      <i
        class="ri-alert-fill"
      />
    </div>
    <div
      class="body"
    >
      <div
        class="message"
      />
    </div>
  </div>
</div>
`;
